thank page link

--- a/index.html
+++ b/index.html
@@ -479,9 +479,12 @@
                   </label>
                 </div> -->
 
-                <button id="auth-button" class="auth-form__btn btn">
+                <a
+                  href="https://renoveringsoffert.se"
+                  class="auth-form__btn btn"
+                >
                   Tillbaka till startsidan
-                </button>
+                </a>
               </div>
             </div>
           </div>
