--- a/arrangement.html
+++ b/arrangement.html
@@ -19,7 +19,7 @@
         />
 
         <div class="the-header__top">
-          <div class="the-header__top-content">
+          <div style="display: none" class="the-header__top-content">
             <div class="logo the-header__logo">
               <img
                 style="height: 30px"
@@ -35,8 +35,8 @@
             <!---->
             <div class="logo the-header__logo centered">
               <img
-                style="height: 30px"
-                src="./img/060E6398-9339-4E3A-8EE7-7D9B78F307E9.png"
+                style="height: 40px"
+                src="./img/Renoveringsoffert.se Logga.svg"
                 alt=""
               />
             </div>
