--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <div class="logo the-header__logo centered">
               <img
                 style="height: 40px"
-                src="./img/060E6398-9339-4E3A-8EE7-7D9B78F307E9.png"
+                src="./img/Renoveringsoffert.se Logga.svg"
                 alt=""
               />
             </div>
