--- a/arrangement.html
+++ b/arrangement.html
@@ -315,7 +315,7 @@
           <div to="[object Object]" class="logo the-footer__logo">
             <img
               style="height: 20px"
-              src="./img/06094416-4AFC-4E4B-A57E-495AAD06F067 (1).png"
+              src="./img/Renoveringsoffert logo.svg"
               alt="logo"
             />
           </div>
