--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <header class="the-header container app__header">
         <img
           class="the-header__bg-picture"
-          src="./img/E4121322-4B05-489E-8FC0-28F6BC6781BD.jpeg"
+          src="./img/Itofferter banner.jpg"
           alt=""
           style="object-position: center top; object-fit: cover"
         />
