--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <header class="the-header container app__header">
         <img
           class="the-header__bg-picture"
-          src="./img/Itofferter top.jpg"
+          src="./img/It offerter.jpg"
           alt=""
           style="object-position: center top; object-fit: cover"
         />
