--- a/arrangement.html
+++ b/arrangement.html
@@ -23,7 +23,7 @@
             <div class="logo the-header__logo">
               <img
                 style="height: 30px"
-                src="./img/060E6398-9339-4E3A-8EE7-7D9B78F307E9.png"
+                src="./img/Itofferter logga.svg"
                 alt=""
               />
             </div>
@@ -36,7 +36,7 @@
             <div class="logo the-header__logo centered">
               <img
                 style="height: 40px"
-                src="./img/Renoveringsoffert.se Logga.svg"
+                src="./img/Itofferter logga.svg"
                 alt=""
               />
             </div>
