--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
         <div class="the-header__top">
           <div class="the-header__top-content">
-            <div style="display: none" class="logo the-header__logo">
+            <div class="logo the-header__logo">
               <img
                 style="height: 30px"
                 src="./img/Itofferter logga.svg"
