--- a/arrangement.html
+++ b/arrangement.html
@@ -19,7 +19,7 @@
         />
 
         <div class="the-header__top">
-          <div style="display: none" class="the-header__top-content">
+          <div class="the-header__top-content">
             <div class="logo the-header__logo">
               <img
                 style="height: 30px"
