--- a/arrangement.html
+++ b/arrangement.html
@@ -30,9 +30,8 @@
             <!---->
           </div>
         </div>
-        <div class="the-header__middle container-inner">
+        <!-- <div class="the-header__middle container-inner">
           <div class="the-header__middle-content">
-            <!---->
             <div class="logo the-header__logo centered">
               <img
                 style="height: 40px"
@@ -41,8 +40,7 @@
               />
             </div>
           </div>
-        </div>
-        <!---->
+        </div> -->
       </header>
 
       <div class="agreements-page container">
