--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             </div>
           </div>
         </div>
-        <div class="the-header__middle container-inner">
+        <!-- <div class="the-header__middle container-inner">
           <div class="the-header__middle-content">
             <div class="logo the-header__logo centered">
               <img
@@ -39,7 +39,7 @@
               />
             </div>
           </div>
-        </div>
+        </div> -->
       </header>
 
       <main class="app__main">
