--- a/arrangement.html
+++ b/arrangement.html
@@ -30,7 +30,7 @@
             <!---->
           </div>
         </div>
-        <!-- <div class="the-header__middle container-inner">
+        <div class="the-header__middle container-inner">
           <div class="the-header__middle-content">
             <div class="logo the-header__logo centered">
               <img
@@ -40,7 +40,7 @@
               />
             </div>
           </div>
-        </div> -->
+        </div>
       </header>
 
       <div class="agreements-page container">
