add fields data

--- a/index.html
+++ b/index.html
@@ -107,7 +107,10 @@
                     id="Jag-ar-select"
                     class="base-select create-project-description__input _shadow _large"
                   >
-                    <span class="base-input__label"> Typ av bostad? </span>
+                    <!-- <span class="base-input__label"> Typ av bostad? </span> -->
+                    <span class="base-input__label">
+                      Vad behöver du hjälp med?
+                    </span>
 
                     <div id="Jag-ar-button" class="base-select__select">
                       <div class="base-select__container">
