add new qestion

--- a/index.html
+++ b/index.html
@@ -107,7 +107,6 @@
                     id="Jag-ar-select"
                     class="base-select create-project-description__input _shadow _large"
                   >
-                    <!-- <span class="base-input__label"> Typ av bostad? </span> -->
                     <span class="base-input__label">
                       Vad behöver du hjälp med?
                     </span>
@@ -322,6 +321,49 @@
                       class="base-input__input"
                     />
                   </label>
+                </div>
+
+                <div class="create-project-description__row">
+                  <div
+                    id="representerar-select"
+                    class="base-select create-project-description__input _shadow _large"
+                  >
+                    <span class="base-input__label">
+                      Vem representerar du?
+                    </span>
+
+                    <div id="representerar-button" class="base-select__select">
+                      <div class="base-select__container">
+                        <div
+                          id="base-select__value__representerar"
+                          class="base-select__value"
+                        ></div>
+                        <div class="base-select__arrow">
+                          <svg
+                            xmlns="http://www.w3.org/2000/svg"
+                            width="240"
+                            height="240"
+                            viewBox="0 0 24 24"
+                            style="fill: rgba(0, 0, 0, 1)"
+                          >
+                            <path
+                              d="M16.293 9.293 12 13.586 7.707 9.293l-1.414 1.414L12 16.414l5.707-5.707z"
+                            ></path>
+                          </svg>
+                        </div>
+                      </div>
+                      <div
+                        style="display: none"
+                        id="representerar-select-item"
+                        class="base-select__dropdown-wrap"
+                      >
+                        <div
+                          id="representerar-select-dropdown"
+                          class="base-select__dropdown"
+                        ></div>
+                      </div>
+                    </div>
+                  </div>
                 </div>
 
                 <div style="justify-content: start" class="auth-form__row">
