--- a/test.html
+++ b/test.html
@@ -1,22 +1,4 @@
-,
-    "Blekinge",
-    "Dalarna",
-    "Gotland",
-    "Gävleborg",
-    "Göteborg",
-    "Halland",
-    "Jämtland",
-    "Jönköping",
-    "Kalmar",
-    "Kronoberg",
-    "Skaraborg",
-    "Skåne",
-    "Stockholm",
-    "Södermanland",
-    "Uppsala",
-    "Värmland",
-    "Västerbotten",
-    "Älvsborg",
-    "Örebro",
-    "Östergötland",
-   </select>
+<select name="dmform-42723" id="1036734938" data-gtm-form-interact-field-id="2">
+  <option selected="" disabled="" hidden="" value="" id="1481075225"></option>
+  "Privatperson", "Företag", "Förening", "Myndighet",
+</select>
