--- a/index.html
+++ b/index.html
@@ -333,7 +333,14 @@
                     </span>
 
                     <div id="representerar-button" class="base-select__select">
-                      <div class="base-select__container">
+                      <div
+                        style="
+                          background-color: transparent;
+                          box-shadow: none;
+                          border: 1px solid #e1e1e1;
+                        "
+                        class="base-select__container"
+                      >
                         <div
                           id="base-select__value__representerar"
                           class="base-select__value"
