--- a/index.html
+++ b/index.html
@@ -338,6 +338,7 @@
                           background-color: transparent;
                           box-shadow: none;
                           border: 1px solid #e1e1e1;
+                          height: 45px;
                         "
                         class="base-select__container"
                       >
