--- a/arrangement.html
+++ b/arrangement.html
@@ -23,7 +23,7 @@
             <div class="logo the-header__logo">
               <img
                 style="height: 30px"
-                src="./img/Itofferter logga.svg"
+                src="./img/Itofferter logga black.svg"
                 alt=""
               />
             </div>
@@ -35,7 +35,7 @@
             <div class="logo the-header__logo centered">
               <img
                 style="height: 40px"
-                src="./img/Itofferter logga.svg"
+                src="./img/Itofferter logga black.svg"
                 alt=""
               />
             </div>
