add footer logo

--- a/arrangement.html
+++ b/arrangement.html
@@ -310,10 +310,10 @@
 
       <footer class="the-footer container app__footer">
         <div class="the-footer__content container-inner">
-          <div to="[object Object]" class="logo the-footer__logo">
+          <div class="logo the-footer__logo">
             <img
-              style="height: 20px"
-              src="./img/Renoveringsoffert logo.svg"
+              style="height: 30px"
+              src="./img/Itofferter logga black.svg"
               alt="logo"
             />
           </div>
