--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <div class="logo the-header__logo">
               <img
                 style="height: 30px"
-                src="./img/Itofferter logga black.svg"
+                src="./img/Itofferter logga.svg"
                 alt=""
               />
             </div>
@@ -34,7 +34,7 @@
             <div class="logo the-header__logo centered">
               <img
                 style="height: 40px"
-                src="./img/Itofferter logga black.svg"
+                src="./img/Itofferter logga.svg"
                 alt=""
               />
             </div>
@@ -436,8 +436,8 @@
         <div class="the-footer__content container-inner">
           <div to="[object Object]" class="logo the-footer__logo">
             <img
-              style="height: 20px"
-              src="./img/Renoveringsoffert logo.svg"
+              style="height: 30px"
+              src="./img/Itofferter logga black.svg"
               alt="logo"
             />
           </div>
