--- a/arrangement.html
+++ b/arrangement.html
@@ -319,12 +319,11 @@
           </div>
           <div class="the-footer__text text">
             <p>
-              Renoveringsofferter.se är en tjänst som specialiserar sig på att
-              underlätta för uppdragsgivare att hitta kvalificerade hantverkare.
-              Vi förstår att renoveringsprojekt kan vara överväldigande och
-              tidskrävande, så vi har skapat en plattform där du enkelt kan
-              komma i kontakt med erfarna hantverkare och jämföra deras
-              offerter.
+              tofferter.se är en tjänst som specialiserar sig på att underlätta
+              för uppdragsgivare att hitta kvalificerade webbyråer. Vi förstår
+              att webbprojekt kan vara överväldigande och tidskrävande, så vi
+              har skapat en plattform där du enkelt kan komma i kontakt med
+              erfarna webbyråer och jämföra deras offerter.
             </p>
           </div>
         </div>
