--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                     rows="10"
                     id="beskrivning"
                     class="base-input__input"
-                    placeholder="Beskriv projektet i detalj för att underlätta offertlämningen från hantverkaren."
+                    placeholder="Beskriv uppdraget i detalj för att underlätta offertlämningen från webbyrån."
                   ></textarea>
                 </label>
 
@@ -443,12 +443,11 @@
           </div>
           <div class="the-footer__text text">
             <p>
-              Renoveringsofferter.se är en tjänst som specialiserar sig på att
-              underlätta för uppdragsgivare att hitta kvalificerade hantverkare.
-              Vi förstår att renoveringsprojekt kan vara överväldigande och
-              tidskrävande, så vi har skapat en plattform där du enkelt kan
-              komma i kontakt med erfarna hantverkare och jämföra deras
-              offerter.
+              tofferter.se är en tjänst som specialiserar sig på att underlätta
+              för uppdragsgivare att hitta kvalificerade webbyråer. Vi förstår
+              att webbprojekt kan vara överväldigande och tidskrävande, så vi
+              har skapat en plattform där du enkelt kan komma i kontakt med
+              erfarna webbyråer och jämföra deras offerter.
             </p>
           </div>
         </div>
