add bottom banner content

--- a/index.html
+++ b/index.html
@@ -54,11 +54,11 @@
                 class="create-project-description create-project__step _description"
               >
                 <h2 class="create-project-description__title">
-                  Beskriv projektet
+                  Beskriv uppdraget
                 </h2>
 
                 <p class="create-project-description__description">
-                  Ge en ingående beskrivning av ditt projekt så att hantverkaren
+                  Ge en ingående beskrivning av ditt uppdrag så att webbyrån
                   enkelt kan lämna en offert som är anpassad efter ditt
                   projektkrav.
                 </p>
@@ -434,7 +434,7 @@
 
       <footer class="the-footer container app__footer">
         <div class="the-footer__content container-inner">
-          <div to="[object Object]" class="logo the-footer__logo">
+          <div class="logo the-footer__logo">
             <img
               style="height: 30px"
               src="./img/Itofferter logga black.svg"
@@ -443,11 +443,11 @@
           </div>
           <div class="the-footer__text text">
             <p>
-              tofferter.se är en tjänst som specialiserar sig på att underlätta
-              för uppdragsgivare att hitta kvalificerade webbyråer. Vi förstår
-              att webbprojekt kan vara överväldigande och tidskrävande, så vi
-              har skapat en plattform där du enkelt kan komma i kontakt med
-              erfarna webbyråer och jämföra deras offerter.
+              Itofferter.se är en tjänst som specialiserar sig på att underlätta
+              för dig att hitta kvalificerade webbyråer. Vi förstår att
+              webbprojekt kan vara överväldigande och tidskrävande, så vi har
+              skapat en plattform där du enkelt kan komma i kontakt med erfarna
+              webbyråer och jämföra deras offerter.
             </p>
           </div>
         </div>
