change some content

--- a/index.html
+++ b/index.html
@@ -207,8 +207,9 @@
                 </h3>
 
                 <p class="create-project-description__section-description">
-                  Här kan du ladda upp bilder dokument eller ritningar för att
-                  ge hantverkaren en klar bild av ditt projekt.
+                  Här kan du ladda upp bilder dokument eller en
+                  kravspecifikation för att ge webbyrån en klar bild av ditt
+                  projekt.
                 </p>
 
                 <div
@@ -281,8 +282,7 @@
             <div class="auth-registration-page__content container-inner">
               <h2 class="auth-registration-page__title">Skapa förfrågan</h2>
               <p class="auth-registration-page__description">
-                Jämför offerter kostnadsfritt få svar av upp till fem
-                renoveringsföretag.
+                Jämför offerter kostnadsfritt få svar av upp till fem webbyråer.
               </p>
 
               <div class="auth-registration-page__form auth-form">
@@ -416,7 +416,7 @@
               </h2>
               <p class="auth-registration-page__description">
                 Vi kommer nu att granska din förfrågan sedan kommer våra
-                renoveringsföretag att kontakta dig för en offert.
+                webbyråer att kontakta dig för en offert.
               </p>
 
               <div class="auth-registration-page__form auth-form">
