--- a/index.html
+++ b/index.html
@@ -207,9 +207,8 @@
                 </h3>
 
                 <p class="create-project-description__section-description">
-                  Här kan du ladda upp bilder dokument eller en
-                  kravspecifikation för att ge webbyrån en klar bild av ditt
-                  projekt.
+                  Här kan du ladda upp bilder dokument eller en för att ge
+                  webbyrån en klar bild av ditt projekt.
                 </p>
 
                 <div
