--- a/arrangement.html
+++ b/arrangement.html
@@ -280,10 +280,10 @@
             </p>
             <h5>Ändring av villkor</h5>
             <p>
-              Dessa villkor kan uppdateras av Renoveringsoffert. Om det sker
-              Dessa villkor kan uppdateras av IT-offerter. Om det sker ändringar
+              Dessa villkor kan uppdateras av Itofferter. Om det sker ändringar
               kommer Itofferter att meddela detta genom att placera ett tydligt
-              meddelande på webbplatsen. Kontaktinformation till IT-offerter:
+              meddelande på webbplatsen. Kontaktinformation till Itofferter:
+
               <br />
               info@itofferter.se
             </p>
