add some more information change

--- a/index.html
+++ b/index.html
@@ -164,9 +164,9 @@
                     id="onskar-select"
                     class="base-select create-project-description__input _shadow _large"
                   >
-                    <span class="base-input__label"
-                      >När önskar du att få hjälp?</span
-                    >
+                    <span class="base-input__label">
+                      När ska uppdraget vara klart?
+                    </span>
 
                     <div id="onskar-button" class="base-select__select">
                       <div class="base-select__container">
