change back to again

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 </p>
 
                 <div class="create-project-description__row">
-                  <!-- <div
+                  <div
                     id="plats-select"
                     class="base-select create-project-description__input _shadow _large"
                   >
@@ -101,7 +101,7 @@
                         ></div>
                       </div>
                     </div>
-                  </div> -->
+                  </div>
 
                   <div
                     id="Jag-ar-select"
