change some text

--- a/arrangement.html
+++ b/arrangement.html
@@ -303,10 +303,10 @@
           <div class="the-footer__text text">
             <p>
               tofferter.se är en tjänst som specialiserar sig på att underlätta
-              för uppdragsgivare att hitta kvalificerade webbyråer. Vi förstår
-              att webbprojekt kan vara överväldigande och tidskrävande, så vi
-              har skapat en plattform där du enkelt kan komma i kontakt med
-              erfarna webbyråer och jämföra deras offerter.
+              för uppdragsgivare att hitta kvalificerade Webbutvecklare. Vi
+              förstår att webbprojekt kan vara överväldigande och tidskrävande,
+              så vi har skapat en plattform där du enkelt kan komma i kontakt
+              med erfarna Webbutvecklare och jämföra deras offerter.
             </p>
           </div>
         </div>
