--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
                 </h2>
 
                 <p class="create-project-description__description">
-                  Ge en ingående beskrivning av ditt uppdrag så att webbyrån
-                  enkelt kan lämna en offert som är anpassad efter ditt
-                  projektkrav.
+                  Ge en ingående beskrivning av ditt uppdrag så att
+                  webbutvecklaren enkelt kan lämna en offert som är anpassad
+                  efter ditt projektkrav.
                 </p>
 
                 <div class="create-project-description__row">
@@ -155,7 +155,7 @@
                     rows="10"
                     id="beskrivning"
                     class="base-input__input"
-                    placeholder="Beskriv uppdraget i detalj för att underlätta offertlämningen från webbyrån."
+                    placeholder="Beskriv uppdraget i detalj för att underlätta offertlämningen från webbutvecklaren."
                   ></textarea>
                 </label>
 
@@ -207,8 +207,8 @@
                 </h3>
 
                 <p class="create-project-description__section-description">
-                  Här kan du ladda upp bilder och dokument för att ge webbyrån
-                  en klar bild av ditt projekt.
+                  Här kan du ladda upp bilder och dokument för att ge
+                  webbutvecklaren en klar bild av ditt projekt.
                 </p>
 
                 <div
@@ -443,10 +443,10 @@
           <div class="the-footer__text text">
             <p>
               Itofferter.se är en tjänst som specialiserar sig på att underlätta
-              för dig att hitta kvalificerade webbyråer. Vi förstår att
+              för dig att hitta kvalificerade Webbutvecklare. Vi förstår att
               webbprojekt kan vara överväldigande och tidskrävande, så vi har
               skapat en plattform där du enkelt kan komma i kontakt med erfarna
-              webbyråer och jämföra deras offerter.
+              Webbutvecklare och jämföra deras offerter.
             </p>
           </div>
         </div>
