change banner and logo

--- a/arrangement.html
+++ b/arrangement.html
@@ -13,7 +13,7 @@
       <header class="the-header container app__header">
         <img
           class="the-header__bg-picture"
-          src="./img/Itofferter banner.jpg"
+          src="./img/It offerter.jpg"
           alt=""
           style="object-position: center top; object-fit: cover"
         />
@@ -23,24 +23,24 @@
             <div class="logo the-header__logo">
               <img
                 style="height: 30px"
-                src="./img/Itofferter logga black.svg"
+                src="./img/Itofferter logga.svg"
                 alt=""
               />
             </div>
             <!---->
           </div>
         </div>
-        <div class="the-header__middle container-inner">
+        <!-- <div class="the-header__middle container-inner">
           <div class="the-header__middle-content">
             <div class="logo the-header__logo centered">
               <img
                 style="height: 40px"
-                src="./img/Itofferter logga black.svg"
+                src="./img/Itofferter logga.svg"
                 alt=""
               />
             </div>
           </div>
-        </div>
+        </div> -->
       </header>
 
       <div class="agreements-page container">
