--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <header class="the-header container app__header">
         <img
           class="the-header__bg-picture"
-          src="./img/Itofferter banner.jpg"
+          src="./img/It offerter.jpg"
           alt=""
           style="object-position: center top; object-fit: cover"
         />
@@ -29,7 +29,7 @@
             </div>
           </div>
         </div>
-        <div class="the-header__middle container-inner">
+        <!-- <div class="the-header__middle container-inner">
           <div class="the-header__middle-content">
             <div class="logo the-header__logo centered">
               <img
@@ -39,7 +39,7 @@
               />
             </div>
           </div>
-        </div>
+        </div> -->
       </header>
 
       <main class="app__main">
