--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                     class="base-select create-project-description__input _shadow _large"
                   >
                     <span class="base-input__label">
-                      Vilken tjänst gäller det?
+                      Vad behöver du hjälp med?
                     </span>
 
                     <div id="Jag-ar-button" class="base-select__select">
