--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                 <label
                   class="base-input create-project-description__input _shadow"
                 >
-                  <span class="base-input__label"> Berätta mer </span>
+                  <span class="base-input__label"> Beskrivning mer </span>
 
                   <textarea
                     cols="30"
