--- a/index.html
+++ b/index.html
@@ -419,10 +419,7 @@
               </p>
 
               <div class="auth-registration-page__form auth-form">
-                <a
-                  href="https://renoveringsoffert.se"
-                  class="auth-form__btn btn"
-                >
+                <a href="https://www.itofferter.se" class="auth-form__btn btn">
                   Tillbaka till startsidan
                 </a>
               </div>
